lesson2/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bip.priv
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: testsvc
            port:
              number: 80
---
